--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </select>
         Interest : <span id="result"></span><br>
 
-        <button onclick="compute()">Compute Interest</button>
+        <button onclick="compute()">Compute Interest</button><br>
         <span id="result">
         </span>
         <footer>
