--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
         <h1>Simple Interest Calculator</h1>
 
         Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="range" id="rate" min="minval" max="maxval" value="default_val">
-        document.getElementById("rate").min = 1
-        document.getElementById("rate").max = 20
-        document.getElementById("rate").step = 0.25
-        document.getElementById("rate").defaultValue = 10.25
+        Rate <input type="range" onchange="updateRate()" id="rate" min=1 max=20 step=0.25 value=10.25>
+
         <span id="rate_val">
             10.25%
-        </span>
-        <select id="years">
+        </span><br>
+
+        No of Years <select id="years">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -30,9 +28,10 @@
             <option value="9">9</option>
             <option value="10">10</option>
         </select>
-        Interest : <span id="result"></span><br>
+        <br>
+        <span id="result"></span><br>
 
-        <button onclick="compute()">Compute Interest</button><br>
+        <button onclick="compute()">Compute Interest</button>
         <span id="result">
         </span>
         <footer>
